# django-basic-project

./: .env  pyproject.toml
project_name/: settings.py  urls.py
project_name/core/: urls.py  views.py
project_name/core/templates/core/: index.html
