[tool.poetry]
authors = ["Cesar Godoi <cesar.godoi@gmail.com>"]
description = "django basic project"
name = "django-basic-project"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "4.0"
psycopg2-binary = "2.9.*"
python = "^3.9"
python-decouple = "^3.5"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
django-extensions = "^3.1.5"
flake8 = "^4.0.1"
ipdb = "^0.13.9"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
